@@ -88,7 +88,8 @@ int		isdotdot(char*);
 int		iseve(void);
 int		kannounce(char*, char*);
 int		kdial(char*, char*, char*, int*);
-int		kproc(char*, void (*)(void*), void*, int);
+void		kproc(char*, void (*)(void*), void*, int);
+void	kprocinit(Proc*);
 int		kfgrpclose(Fgrp*, int);
 void		ksetenv(char*, char*, int);
 void		kstrcpy(char*, char*, int);
